Correction des z-index des éléments de la page.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body::after {
     pointer-events: none;
 }
 nav {
-    z-index: 2;
+    z-index: 1;
     background: #f2f2f2;
     padding: 10px;
     text-align: center;
@@ -58,11 +58,12 @@ nav a:hover {
 }
 
 .main-content {
-    z-index: 1 !important;
+    z-index: 1;
     display: flex;
     padding: 60px 20px 0;
 }
 .items-container {
+    z-index: 2;
     flex-shrink: 0;
     padding: 10px;
     width: 300px;
@@ -157,6 +158,7 @@ button[type="submit"] {
 
 /* Add New Container */
 .add-new-container {
+    z-index: 2;
     flex-shrink: 0;
     padding: 10px;
     width: 300px;
